--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -306,7 +306,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Skills Css ************/
 .skill {
   padding: 0 0 50px 0;
-  position: relative;
+  
 }
 .skill-bx {
   background: #151515;
@@ -343,11 +343,29 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
+.row-card {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  
+  
+}
+
+.card-overview {
+  background-color: #222;
+  width: 10px;
+  
+}
+.card-body{
+  padding: 15px;
+  font-size: large;
+}
+
+
 /************ Projects Css ************/
 .project {
   padding: 80px 0;
   position: relative;
-  background-color: black;
+  
 }
 .project h2 {
 	font-size: 45px;
